Experimentos PySpark y Dask

--- a/Lab2BD.ipynb
+++ b/Lab2BD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUEzKuEqbDI7q27EcmJlrL",
+      "authorship_tag": "ABX9TyNc1/vA0duVXmUQ+xN8P8rQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,24 +72,209 @@
         "\n",
         "---\n",
         "\n",
-        "## Análisis de la Librería\n",
+        "## Análisis de la Librería PySpark.\n",
         "\n",
-        "Recomendaciones basadas en los hallazgos del informe.\n",
+        "* Al cargar los 4 archivos y concatenarlos, todo funcionó sin problemas, siendo el que menos recursos consumió tanto en RAM como en disco. Al haber funcionado tan bien en la primera prueba, que es la más pesada en términos de recursos, consideramos que no es necesario realizar las otras dos, que son menos exigentes.\n",
         "\n",
-        "---\n",
-        "\n",
-        "## Análisis de la Librería\n",
-        "\n",
+        "![Anexo8](https://drive.usercontent.google.com/download?id=1Copwqn7Jrzv5V4MWoTtLkK8grZ2A0eX5&export=download&authuser=0&confirm=t&uuid=09a24fbf-f39a-452e-a443-1611d4b5264c&at=APZUnTWs6cDCTWPZwMG3tNG7TGDx:1718909944649)\n",
         "\n",
         "---\n",
         "\n",
-        "## Contacto\n",
+        "## Análisis de la Librería dask\n",
         "\n",
-        "Información de contacto para más detalles.\n",
+        "* Al cargar los 4 archivos y concatenarlos, todo funcionó sin problemas. Sin embargo, al momento de usar df.compute(), que convierte un dask.dataframe.DataFrame en un pandas.DataFrame, el entorno se satura y se reinicia. No obstante, al omitir esa conversión y pasar directamente a la parte de la agrupación y edición de los nombres de las columnas, convirtiéndolos a formato cadena, se vuelve compatible con el formato Parquet y nos permite ver los resultados. Aunque esto consume casi el límite de los recursos que brinda Google Colab, alcanza a ejecutarse sin que se reinicie el entorno.\n",
+        "\n",
+        "![Anexo9](https://drive.usercontent.google.com/download?id=1KfEcROIFJsD61MthXREQ2KGn52KWScGb&export=download&authuser=0&confirm=t&uuid=d0bc4c03-f087-4f20-9bad-8445aee19250&at=APZUnTWbtbyjpDkaOUoNTSVDTt2w:1718911975301)\n",
+        "![Anexo10](https://drive.usercontent.google.com/download?id=1_6J1F7IHH3tFtnU7EpFIFiKZboLIFFEJ&export=download&authuser=0&confirm=t&uuid=b2af4b27-21ff-47ae-9e3d-5114757c6d65&at=APZUnTWpJIGRiDewyw3y-F9XItRH:1718911993369)\n",
+        "---\n",
+        "\n",
         "\n"
       ],
       "metadata": {
         "id": "cZQoCu3N8qER"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Crear el DataFrame con la comparación\n",
+        "data = {\n",
+        "    \"Librería\": [\"Pandas\", \"Polars\", \"Spark\", \"Dask\"],\n",
+        "    \"Diferencias\": [\n",
+        "        \"Orientada a series y DataFrames, basada en NumPy.\",\n",
+        "        \"Optimizada en Rust, enfocada en la velocidad y bajo consumo de memoria.\",\n",
+        "        \"Framework distribuido para procesamiento de grandes datos.\",\n",
+        "        \"Extiende Pandas para operaciones distribuidas y paralelas.\"\n",
+        "    ],\n",
+        "    \"Ventajas\": [\n",
+        "        \"Fácil de usar, amplia documentación, integrada con muchos otros paquetes.\",\n",
+        "        \"Muy rápida y eficiente en memoria, especialmente en operaciones en paralelo.\",\n",
+        "        \"Capaz de manejar datos masivos distribuidos en clústeres.\",\n",
+        "        \"Permite procesamiento paralelo en un solo equipo o en clústeres, similar a Pandas.\"\n",
+        "    ],\n",
+        "    \"Desventajas\": [\n",
+        "        \"No es eficiente con grandes volúmenes de datos, consumo de memoria alto.\",\n",
+        "        \"Menos maduro que Pandas, ecosistema y documentación aún en crecimiento.\",\n",
+        "        \"Curva de aprendizaje empinada, requiere configuración de clúster.\",\n",
+        "        \"No tan rápido como Polars y no tan maduro como Spark para grandes clústeres.\"\n",
+        "    ],\n",
+        "    \"Eficiencia y Eficacia\": [\n",
+        "        \"Eficaz para análisis de datos de tamaño pequeño a moderado.\",\n",
+        "        \"Muy eficiente para operaciones de datos grandes en memoria.\",\n",
+        "        \"Altamente eficaz para grandes volúmenes de datos distribuidos.\",\n",
+        "        \"Eficiente para grandes volúmenes de datos en una sola máquina o en pequeñas configuraciones de clúster.\"\n",
+        "    ],\n",
+        "    \"Se aplica mejor a\": [\n",
+        "        \"Datos de hasta unos pocos millones de filas.\",\n",
+        "        \"Datos medianos a grandes, optimizada para operaciones rápidas.\",\n",
+        "        \"Grandes volúmenes de datos distribuidos en múltiples nodos.\",\n",
+        "        \"Datos grandes, operaciones distribuidas y paralelas, no tan grandes como Spark.\"\n",
+        "    ]\n",
+        "}\n",
+        "\n",
+        "df_comparacion = pd.DataFrame(data)\n",
+        "\n",
+        "# Función para aplicar estilos a las celdas específicas\n",
+        "def bold_names(val):\n",
+        "    if val in data[\"Librería\"]:\n",
+        "        return 'font-weight: bold'\n",
+        "    return ''\n",
+        "\n",
+        "# Aplicar estilos para mejorar la visualización\n",
+        "def apply_styles(df):\n",
+        "    styled_df = df.style.applymap(bold_names, subset=pd.IndexSlice[:, [\"Librería\"]])\n",
+        "    return styled_df.set_properties(**{\n",
+        "        'background-color': 'white',\n",
+        "        'color': 'black',\n",
+        "        'border-color': 'black',\n",
+        "        'border-width': '1px',\n",
+        "        'border-style': 'solid',\n",
+        "        'font-family': 'Arial, sans-serif',\n",
+        "        'font-size': '12px',\n",
+        "        'text-align': 'left',\n",
+        "        'padding': '10px'\n",
+        "    }).set_table_styles([{\n",
+        "        'selector': 'th',\n",
+        "        'props': [('background-color', '#f2f2f2'), ('color', 'black'), ('font-weight', 'bold'), ('text-align', 'center')]\n",
+        "    }])\n",
+        "\n",
+        "# Mostrar el DataFrame con estilos aplicados y sin índices numéricos\n",
+        "apply_styles(df_comparacion).hide(axis=\"index\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "hn8QOTvSJN2W",
+        "outputId": "fcdf4a07-37cc-4bd8-c808-55c6fd51b291",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 253
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<pandas.io.formats.style.Styler at 0x786b83c7bb50>"
+            ],
+            "text/html": [
+              "<style type=\"text/css\">\n",
+              "#T_2247c th {\n",
+              "  background-color: #f2f2f2;\n",
+              "  color: black;\n",
+              "  font-weight: bold;\n",
+              "  text-align: center;\n",
+              "}\n",
+              "#T_2247c_row0_col0, #T_2247c_row1_col0, #T_2247c_row2_col0, #T_2247c_row3_col0 {\n",
+              "  font-weight: bold;\n",
+              "  background-color: white;\n",
+              "  color: black;\n",
+              "  border-color: black;\n",
+              "  border-width: 1px;\n",
+              "  border-style: solid;\n",
+              "  font-family: Arial, sans-serif;\n",
+              "  font-size: 12px;\n",
+              "  text-align: left;\n",
+              "  padding: 10px;\n",
+              "}\n",
+              "#T_2247c_row0_col1, #T_2247c_row0_col2, #T_2247c_row0_col3, #T_2247c_row0_col4, #T_2247c_row0_col5, #T_2247c_row1_col1, #T_2247c_row1_col2, #T_2247c_row1_col3, #T_2247c_row1_col4, #T_2247c_row1_col5, #T_2247c_row2_col1, #T_2247c_row2_col2, #T_2247c_row2_col3, #T_2247c_row2_col4, #T_2247c_row2_col5, #T_2247c_row3_col1, #T_2247c_row3_col2, #T_2247c_row3_col3, #T_2247c_row3_col4, #T_2247c_row3_col5 {\n",
+              "  background-color: white;\n",
+              "  color: black;\n",
+              "  border-color: black;\n",
+              "  border-width: 1px;\n",
+              "  border-style: solid;\n",
+              "  font-family: Arial, sans-serif;\n",
+              "  font-size: 12px;\n",
+              "  text-align: left;\n",
+              "  padding: 10px;\n",
+              "}\n",
+              "</style>\n",
+              "<table id=\"T_2247c\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th id=\"T_2247c_level0_col0\" class=\"col_heading level0 col0\" >Librería</th>\n",
+              "      <th id=\"T_2247c_level0_col1\" class=\"col_heading level0 col1\" >Diferencias</th>\n",
+              "      <th id=\"T_2247c_level0_col2\" class=\"col_heading level0 col2\" >Ventajas</th>\n",
+              "      <th id=\"T_2247c_level0_col3\" class=\"col_heading level0 col3\" >Desventajas</th>\n",
+              "      <th id=\"T_2247c_level0_col4\" class=\"col_heading level0 col4\" >Eficiencia y Eficacia</th>\n",
+              "      <th id=\"T_2247c_level0_col5\" class=\"col_heading level0 col5\" >Se aplica mejor a</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <td id=\"T_2247c_row0_col0\" class=\"data row0 col0\" >Pandas</td>\n",
+              "      <td id=\"T_2247c_row0_col1\" class=\"data row0 col1\" >Orientada a series y DataFrames, basada en NumPy.</td>\n",
+              "      <td id=\"T_2247c_row0_col2\" class=\"data row0 col2\" >Fácil de usar, amplia documentación, integrada con muchos otros paquetes.</td>\n",
+              "      <td id=\"T_2247c_row0_col3\" class=\"data row0 col3\" >No es eficiente con grandes volúmenes de datos, consumo de memoria alto.</td>\n",
+              "      <td id=\"T_2247c_row0_col4\" class=\"data row0 col4\" >Eficaz para análisis de datos de tamaño pequeño a moderado.</td>\n",
+              "      <td id=\"T_2247c_row0_col5\" class=\"data row0 col5\" >Datos de hasta unos pocos millones de filas.</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td id=\"T_2247c_row1_col0\" class=\"data row1 col0\" >Polars</td>\n",
+              "      <td id=\"T_2247c_row1_col1\" class=\"data row1 col1\" >Optimizada en Rust, enfocada en la velocidad y bajo consumo de memoria.</td>\n",
+              "      <td id=\"T_2247c_row1_col2\" class=\"data row1 col2\" >Muy rápida y eficiente en memoria, especialmente en operaciones en paralelo.</td>\n",
+              "      <td id=\"T_2247c_row1_col3\" class=\"data row1 col3\" >Menos maduro que Pandas, ecosistema y documentación aún en crecimiento.</td>\n",
+              "      <td id=\"T_2247c_row1_col4\" class=\"data row1 col4\" >Muy eficiente para operaciones de datos grandes en memoria.</td>\n",
+              "      <td id=\"T_2247c_row1_col5\" class=\"data row1 col5\" >Datos medianos a grandes, optimizada para operaciones rápidas.</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td id=\"T_2247c_row2_col0\" class=\"data row2 col0\" >Spark</td>\n",
+              "      <td id=\"T_2247c_row2_col1\" class=\"data row2 col1\" >Framework distribuido para procesamiento de grandes datos.</td>\n",
+              "      <td id=\"T_2247c_row2_col2\" class=\"data row2 col2\" >Capaz de manejar datos masivos distribuidos en clústeres.</td>\n",
+              "      <td id=\"T_2247c_row2_col3\" class=\"data row2 col3\" >Curva de aprendizaje empinada, requiere configuración de clúster.</td>\n",
+              "      <td id=\"T_2247c_row2_col4\" class=\"data row2 col4\" >Altamente eficaz para grandes volúmenes de datos distribuidos.</td>\n",
+              "      <td id=\"T_2247c_row2_col5\" class=\"data row2 col5\" >Grandes volúmenes de datos distribuidos en múltiples nodos.</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td id=\"T_2247c_row3_col0\" class=\"data row3 col0\" >Dask</td>\n",
+              "      <td id=\"T_2247c_row3_col1\" class=\"data row3 col1\" >Extiende Pandas para operaciones distribuidas y paralelas.</td>\n",
+              "      <td id=\"T_2247c_row3_col2\" class=\"data row3 col2\" >Permite procesamiento paralelo en un solo equipo o en clústeres, similar a Pandas.</td>\n",
+              "      <td id=\"T_2247c_row3_col3\" class=\"data row3 col3\" >No tan rápido como Polars y no tan maduro como Spark para grandes clústeres.</td>\n",
+              "      <td id=\"T_2247c_row3_col4\" class=\"data row3 col4\" >Eficiente para grandes volúmenes de datos en una sola máquina o en pequeñas configuraciones de clúster.</td>\n",
+              "      <td id=\"T_2247c_row3_col5\" class=\"data row3 col5\" >Datos grandes, operaciones distribuidas y paralelas, no tan grandes como Spark.</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Informe Diseñado por:\n",
+        "\n",
+        "#####Johan Sebastian Quintero Vargas - **107699**\n",
+        "#####Breiner Spencer Barrios Asprilla - **121230**"
+      ],
+      "metadata": {
+        "id": "5NXrdgAIJaE3"
       }
     },
     {
