Informe Final Lab2

--- a/Lab2BD.ipynb
+++ b/Lab2BD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNc1/vA0duVXmUQ+xN8P8rQ",
+      "authorship_tag": "ABX9TyPzHJtwjb/497mgq9yvGUxn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,6 +88,49 @@
         "![Anexo10](https://drive.usercontent.google.com/download?id=1_6J1F7IHH3tFtnU7EpFIFiKZboLIFFEJ&export=download&authuser=0&confirm=t&uuid=b2af4b27-21ff-47ae-9e3d-5114757c6d65&at=APZUnTWpJIGRiDewyw3y-F9XItRH:1718911993369)\n",
         "---\n",
         "\n",
+        "# **Comparación de Librerías: Pandas, Polars, Spark, Dask**\n",
+        "\n",
+        "## Resumen Comparativo\n",
+        "\n",
+        "### 1. **Pandas**\n",
+        "- **Carga de datos:**\n",
+        "  - No puede manejar los 4 archivos a la vez debido a la limitación de RAM en Google Colab.\n",
+        "  - Puede manejar archivos de menor tamaño, pero se colapsa al intentar concatenar archivos grandes.\n",
+        "- **Rendimiento:**\n",
+        "  - Consume una cantidad significativa de recursos.\n",
+        "  - Colapsa en operaciones con grandes volúmenes de datos.\n",
+        "\n",
+        "### 2. **Polars**\n",
+        "- **Carga de datos:**\n",
+        "  - Similar a Pandas, no puede manejar los 4 archivos simultáneamente debido a la limitación de RAM.\n",
+        "  - Encuentra problemas con tipos de datos al intentar concatenar archivos de 2019 y 2020.\n",
+        "  - Puede manejar archivos de menor tamaño, con ajustes en la concatenación y agrupación.\n",
+        "- **Rendimiento:**\n",
+        "  - Más estricto con los tipos de datos que Pandas.\n",
+        "  - Requiere correcciones en los datos para evitar errores durante el procesamiento.\n",
+        "\n",
+        "### 3. **PySpark**\n",
+        "- **Carga de datos:**\n",
+        "  - Maneja la carga y concatenación de los 4 archivos sin problemas.\n",
+        "  - Consume menos recursos en comparación con las otras librerías.\n",
+        "- **Rendimiento:**\n",
+        "  - La librería más eficiente en términos de uso de RAM y disco.\n",
+        "  - No se reinicia el entorno incluso con la carga de trabajo más pesada.\n",
+        "\n",
+        "### 4. **Dask**\n",
+        "- **Carga de datos:**\n",
+        "  - Maneja la carga y concatenación de los 4 archivos sin problemas.\n",
+        "  - La conversión a `pandas.DataFrame` (con `df.compute()`) satura la RAM y reinicia el entorno.\n",
+        "  - Omite la conversión directa y ajusta los nombres de las columnas para trabajar con Parquet.\n",
+        "- **Rendimiento:**\n",
+        "  - Permite ver los resultados después de optimizar el uso de recursos.\n",
+        "  - Alcanza a ejecutarse sin que se reinicie el entorno, aunque consume casi todo el límite de recursos disponibles en Google Colab.\n",
+        "\n",
+        "## Conclusiones\n",
+        "\n",
+        "- **Pandas** y **Polars** son menos eficientes con grandes volúmenes de datos en entornos con recursos limitados como Google Colab, debido a problemas de RAM y manejo de tipos de datos.\n",
+        "- **PySpark** se destaca por su eficiencia y capacidad para manejar grandes volúmenes de datos sin problemas, consumiendo menos recursos.\n",
+        "- **Dask** ofrece una solución intermedia, permitiendo la carga y procesamiento de grandes volúmenes de datos mediante la optimización de recursos y evitando la conversión directa a `pandas.DataFrame`.\n",
         "\n"
       ],
       "metadata": {
@@ -165,12 +208,12 @@
         "\n"
       ],
       "metadata": {
-        "id": "hn8QOTvSJN2W",
-        "outputId": "fcdf4a07-37cc-4bd8-c808-55c6fd51b291",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 253
-        }
+        },
+        "id": "hn8QOTvSJN2W",
+        "outputId": "fcdf4a07-37cc-4bd8-c808-55c6fd51b291"
       },
       "execution_count": 1,
       "outputs": [
@@ -276,15 +319,6 @@
       "metadata": {
         "id": "5NXrdgAIJaE3"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "rnpht7TTVwuy"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
